[注册] 注册 Api 也改成了取body数据,数据校验需要考虑
